; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linuxkpi/common/src/extr_linux_usb.c_usb_linux_resume.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linuxkpi/common/src/extr_linux_usb.c_usb_linux_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_linux_softc = type { i32 }
%struct.usb_driver = type { i32 (i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @usb_linux_resume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @usb_linux_resume(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.usb_linux_softc*, align 8
  %4 = alloca %struct.usb_driver*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call %struct.usb_linux_softc* @device_get_softc(i32 %6)
  store %struct.usb_linux_softc* %7, %struct.usb_linux_softc** %3, align 8
  %8 = load %struct.usb_linux_softc*, %struct.usb_linux_softc** %3, align 8
  %9 = call %struct.usb_driver* @usb_linux_get_usb_driver(%struct.usb_linux_softc* %8)
  store %struct.usb_driver* %9, %struct.usb_driver** %4, align 8
  %10 = load %struct.usb_driver*, %struct.usb_driver** %4, align 8
  %11 = icmp ne %struct.usb_driver* %10, null
  br i1 %11, label %12, label %25

12:                                               ; preds = %1
  %13 = load %struct.usb_driver*, %struct.usb_driver** %4, align 8
  %14 = getelementptr inbounds %struct.usb_driver, %struct.usb_driver* %13, i32 0, i32 0
  %15 = load i32 (i32)*, i32 (i32)** %14, align 8
  %16 = icmp ne i32 (i32)* %15, null
  br i1 %16, label %17, label %25

17:                                               ; preds = %12
  %18 = load %struct.usb_driver*, %struct.usb_driver** %4, align 8
  %19 = getelementptr inbounds %struct.usb_driver, %struct.usb_driver* %18, i32 0, i32 0
  %20 = load i32 (i32)*, i32 (i32)** %19, align 8
  %21 = load %struct.usb_linux_softc*, %struct.usb_linux_softc** %3, align 8
  %22 = getelementptr inbounds %struct.usb_linux_softc, %struct.usb_linux_softc* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 %20(i32 %23)
  store i32 %24, i32* %5, align 4
  br label %25

25:                                               ; preds = %17, %12, %1
  ret i32 0
}

declare dso_local %struct.usb_linux_softc* @device_get_softc(i32) #1

declare dso_local %struct.usb_driver* @usb_linux_get_usb_driver(%struct.usb_linux_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
